--- a/papago-api-client/papago-api-client.vcxproj
+++ b/papago-api-client/papago-api-client.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="circle_mesh.hpp" />
     <ClInclude Include="src\thread_pool.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
