--- a/papago-api-client/papago-api-client.vcxproj.filters
+++ b/papago-api-client/papago-api-client.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="src\thread_pool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="circle_mesh.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
